--- a/.github/workflows/SFM Down Task.yml
+++ b/.github/workflows/SFM Down Task.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: Swift Package Manager
     # 环境
-    runs-on: macos-latest
+    runs-on: macos-10.15
 
     steps:
     # 检出代码
@@ -22,7 +22,7 @@ jobs:
     # 框架下载
     - name: 框架下载
       run: |
-        swift package update
+        swift package resolve
         echo "✅✅✅✅✅✅✅"
         ls -l -a .build
 
