--- a/.github/workflows/SFM Down Task.yml
+++ b/.github/workflows/SFM Down Task.yml
@@ -12,88 +12,142 @@ on:
     branches: [ main , master]
 
 
+
 jobs:
-  build:
-    name: Swift Package Manager
-    # 环境
-    # macos-12
-    # macos-latest or macos-11
-    # macos-10.15
-    runs-on: macos-10.15
-
+  artifact-build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-12,  macos-11, macos-10.15, ubuntu-22.04, ubuntu-20.04, ubuntu-18.04]
     steps:
-    # 检出代码
-    - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build VPNParser
+        run: |
+          uname
+          uname -m
+          echo ${{ matrix.os }}
+          pwd
+          ls -la
 
 
 
-    # 框架下载
-    - name: 框架下载
-      run: |
-        swift package resolve
-        echo "✅✅✅✅✅✅✅"
-        ls -l -a .build
-        echo "✅✅✅✅✅✅✅"
-        ls -l -a 
+      # # 构建预览发布信息
+      # - name: Generate Prerelease Release
+      #   id: create_release
+      #   run: |
+      #     echo '### VPNParser解析工具' > ReleaseNotes.md
+      #     echo "Swift Version: 5.7" >> ReleaseNotes.md
 
 
-    - name: 压缩
-      run: |
-        sleep 0.5
-        mv .build SourcePackages
-        mkdir -p archive
-        cp Package.resolved archive/
-        sleep 0.5
-        zip -r archive/sfm-full.zip SourcePackages
-        sleep 0.5
-        rm -rf SourcePackages/checkouts
-        sleep 0.5
-        zip -r archive/sfm-repositories.zip SourcePackages
-        sleep 0.5
+
+
+      # # 发布
+      # - name: Publish GitHub Release
+      #   # if: contains(github.event.head_commit.message, 'Bump version') == false
+      #   uses: ncipollo/release-action@v1.12.0
+      #   with:
+      #     allowUpdates: true
+      #     replacesArtifacts: true
+      #     prerelease: false
+      #     draft: false
+      #     bodyFile: ReleaseNotes.md
+      #     artifacts: "./VPNParser/Release/*.zip"
+      #     tag: "v1.0.0"
+      #     token: ${{ secrets.GITHUB_TOKEN }}   
+
+
+
+
+
+
+
+
+
+
+# jobs:
+#   build:
+#     name: Swift Package Manager
+#     # 环境
+#     # macos-12
+#     # macos-latest or macos-11
+#     # macos-10.15
+#     runs-on: macos-10.15
+
+#     steps:
+#     # 检出代码
+#     - uses: actions/checkout@v2
+
+
+
+#     # 框架下载
+#     - name: 框架下载
+#       run: |
+#         swift package resolve
+#         echo "✅✅✅✅✅✅✅"
+#         ls -l -a .build
+#         echo "✅✅✅✅✅✅✅"
+#         ls -l -a 
+
+
+#     - name: 压缩
+#       run: |
+#         sleep 0.5
+#         mv .build SourcePackages
+#         mkdir -p archive
+#         cp Package.resolved archive/
+#         sleep 0.5
+#         zip -r archive/sfm-full.zip SourcePackages
+#         sleep 0.5
+#         rm -rf SourcePackages/checkouts
+#         sleep 0.5
+#         zip -r archive/sfm-repositories.zip SourcePackages
+#         sleep 0.5
         
         
 
-    # ##2. GitHub Push Action
-    # - name: Push changes
-    #   uses: ad-m/github-push-action@master
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+#     # ##2. GitHub Push Action
+#     # - name: Push changes
+#     #   uses: ad-m/github-push-action@master
+#     #   with:
+#     #     github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
 
-  # 构建预览发布信息
-    - name: Generate Prerelease Release
-      id: create_release
-      run: |
-        echo '### Swift Package Manager' > ReleaseNotes.md
-        echo "" >> ReleaseNotes.md
-        echo "更新时间：$(date '+%Y-%m-%d %H:%M:%S')" >> ReleaseNotes.md
-        echo "使用方法：" >> ReleaseNotes.md
-        echo "1. 下载Package.resolved文件，并替换本地项目的同名文件。 " >> ReleaseNotes.md
-        echo '2. 下载sfm文件到本地，并替换本地项目的SourcePackages即可。' >> ReleaseNotes.md
-        echo '3. sfm分两个版：sfm-full和sfm-repositories，如果二者大小区别不大，推荐下载sfm-full版本。' >> ReleaseNotes.md
+#   # 构建预览发布信息
+#     - name: Generate Prerelease Release
+#       id: create_release
+#       run: |
+#         echo '### Swift Package Manager' > ReleaseNotes.md
+#         echo "" >> ReleaseNotes.md
+#         echo "更新时间：$(date '+%Y-%m-%d %H:%M:%S')" >> ReleaseNotes.md
+#         echo "使用方法：" >> ReleaseNotes.md
+#         echo "1. 下载Package.resolved文件，并替换本地项目的同名文件。 " >> ReleaseNotes.md
+#         echo '2. 下载sfm文件到本地，并替换本地项目的SourcePackages即可。' >> ReleaseNotes.md
+#         echo '3. sfm分两个版：sfm-full和sfm-repositories，如果二者大小区别不大，推荐下载sfm-full版本。' >> ReleaseNotes.md
 
 
-    # 删除旧的预览发布    
-    - name: Delete Old Prerelease
-      uses: dev-drprasad/delete-tag-and-release@v0.2.0
-      with:
-        # tag_name: ${{ env.OLD_PRE_TAG }}
-        tag_name: "v0.1-spm"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     # 删除旧的预览发布    
+#     - name: Delete Old Prerelease
+#       uses: dev-drprasad/delete-tag-and-release@v0.2.0
+#       with:
+#         # tag_name: ${{ env.OLD_PRE_TAG }}
+#         tag_name: "v0.1-spm"
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
-    # 发布预览版
-    - name: Publish GitHub Release
-      if: contains(github.event.head_commit.message, 'Bump version') == false
-      uses: ncipollo/release-action@v1.8.6
-      with:
-        prerelease: false
-        bodyFile: ReleaseNotes.md
-        artifacts: "./archive/*"
-        tag: "v0.1-spm"
-        token: ${{ secrets.GITHUB_TOKEN }}   
+#     # 发布预览版
+#     - name: Publish GitHub Release
+#       if: contains(github.event.head_commit.message, 'Bump version') == false
+#       uses: ncipollo/release-action@v1.8.6
+#       with:
+#         prerelease: false
+#         bodyFile: ReleaseNotes.md
+#         artifacts: "./archive/*"
+#         tag: "v0.1-spm"
+#         token: ${{ secrets.GITHUB_TOKEN }}   
 
 
 
