--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,4 +14,7 @@ jobs:
       matrix: 
         os: [ubuntu-latest, [self-hosted, linux, ARM64]] 
     runs-on: ${{ matrix.os }}
-    - run: uname -m
+    steps: 
+      - name: Check out repository code 
+        uses: actions/checkout@v3 
+      - run: uname -m
