--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,20 +1,29 @@
-name: Custom GitHub Actions runner Demo 
-on: [push] 
-jobs: 
-  Build-and-Run-FizzBuzz: 
-    runs-on: ubuntu-latest 
-    steps: 
-      - name: Check out repository code 
-        uses: actions/checkout@v3 
-      - run: uname -m
+on: [push, pull_request]
 
+jobs:
+  armv7_job:
+    # The host should always be Linux
+    runs-on: ubuntu-18.04
+    name: Build on ubuntu-18.04 armv7
+    steps:
+      - uses: actions/checkout@v3
+      - uses: uraimo/run-on-arch-action@v2
+        name: Run commands
+        id: runcmd
+        with:
+          arch: armv7
+          distro: ubuntu18.04
 
-  Build-and-Run-FizzBuzz-arm:
-    strategy: 
-      matrix: 
-        os: [ubuntu-latest, [ linux, ARM64]] 
-    runs-on: ${{ matrix.os }}
-    steps: 
-      - name: Check out repository code 
-        uses: actions/checkout@v3 
-      - run: uname -m
+          # Not required, but speeds up builds by storing container images in
+          # a GitHub package registry.
+          githubToken: ${{ github.token }}
+
+          # Set an output parameter `uname` for use in subsequent steps
+          run: |
+            uname -a
+            echo ::set-output name=uname::$(uname -a)
+
+      - name: Get the output
+        # Echo the `uname` output parameter from the `runcmd` step
+        run: |
+          echo "The uname output was ${{ steps.runcmd.outputs.uname }}"
