--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,18 +1,18 @@
 on: [push, pull_request]
 
 jobs:
-  armv7_job:
+  aarch64_job:
     # The host should always be Linux
-    runs-on: ubuntu-18.04
-    name: Build on ubuntu-18.04 armv7
+    runs-on: ubuntu20.04
+    name: Build on ubuntu20.04 aarch64
     steps:
       - uses: actions/checkout@v3
       - uses: uraimo/run-on-arch-action@v2
         name: Run commands
         id: runcmd
         with:
-          arch: armv7
-          distro: ubuntu18.04
+          arch: aarch64
+          distro: ubuntu20.04
 
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
@@ -21,9 +21,9 @@ jobs:
           # Set an output parameter `uname` for use in subsequent steps
           run: |
             uname -a
-            echo ::set-output name=uname::$(uname -a)
+            echo ::set-output name=uname1::$(uname -a)
 
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
         run: |
-          echo "The uname output was ${{ steps.runcmd.outputs.uname }}"
+          echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
