--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,6 +24,7 @@ jobs:
             uname -m
             ls -la
             echo ::set-output name=uname1::$(uname -a)
+            apt-get install curl
             curl -s https://archive.swiftlang.xyz/install.sh | sudo bash
             sudo apt-get install swiftlang
             swift -version
