--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -2,7 +2,7 @@ name: Ubuntu ARM64 Workflow
 on: [push]
 
 jobs:
-  build:
+  ubuntu-22.04-arm64:
     runs-on: ubuntu-22.04-arm64
     strategy:
       matrix:
