--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   ubuntu-22-04-arm64:
-    if: contains(github.event.head_commit.message, 'Bump version') == false
+    if: contains(github.event.head_commit.message, 'linux-arm64')
     runs-on: ubuntu-22.04-arm64
     strategy:
       matrix:
