--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -10,8 +10,10 @@ jobs:
         architecture: [arm64]
     steps:
       - name: Checkout code
+        id: checkout-code
         uses: actions/checkout@v3
       - name: Run build script
+        id: system-info
         run: |
           uname -m
           uname -a
@@ -19,3 +21,13 @@ jobs:
 
 
 
+  ubuntu22-arm64:
+    # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
+    if: contains(github.event.head_commit.message, 'linux-arm64')
+    # 通过actions-runner远程使用Termux-Ubuntu系统
+    runs-on: ubuntu-22.04-arm64
+    steps:
+      - name: Checkout
+        uses: checkout-code
+      - name: Show Info
+        uses: system-info
