--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -1,34 +1,59 @@
 name: Ubuntu ARM64 Workflow
 on: [push]
 
+# jobs:
+#   ubuntu-22-04-arm64:
+#     if: contains(github.event.head_commit.message, 'linux-arm64')
+#     runs-on: ubuntu-22.04-arm64
+#     strategy:
+#       matrix:
+#         architecture: [arm64]
+#     steps:
+#       - name: Checkout code
+#         id: checkout-code
+#         uses: actions/checkout@v3
+#       - name: Run build script
+#         id: system-info
+#         run: |
+#           uname -m
+#           uname -a
+#           swift -version
+
+
+
+#   ubuntu22-arm64:
+#     # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
+#     if: contains(github.event.head_commit.message, 'linux-arm64')
+#     # 通过actions-runner远程使用Termux-Ubuntu系统
+#     runs-on: ubuntu-22.04-arm64
+#     steps:
+#       - name: Checkout
+#         uses: checkout-code
+#       - name: Show Info
+#         uses: system-info
+
+
 jobs:
-  ubuntu-22-04-arm64:
-    if: contains(github.event.head_commit.message, 'linux-arm64')
-    runs-on: ubuntu-22.04-arm64
+  artifact-build:
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        architecture: [arm64]
-    steps:
-      - name: Checkout code
-        id: checkout-code
-        uses: actions/checkout@v3
-      - name: Run build script
-        id: system-info
-        run: |
-          uname -m
-          uname -a
-          swift -version
-
-
-
-  ubuntu22-arm64:
-    # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
-    if: contains(github.event.head_commit.message, 'linux-arm64')
-    # 通过actions-runner远程使用Termux-Ubuntu系统
-    runs-on: ubuntu-22.04-arm64
+        os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
     steps:
       - name: Checkout
-        uses: checkout-code
-      - name: Show Info
-        uses: system-info
-
+        uses: actions/checkout@v3
+      - name: Setup Swift
+        if: ${ matrix.os } != "ubuntu-22.04-arm64"
+        uses: swift-actions/setup-swift@v1
+        with:
+          swift-version: "5.7.3"
+      - name: Show System Info
+        id: system-info
+        run: |
+          echo ${{ matrix.os }}
+          uname
+          uname -m
+          uname -a
+          swift --version
+          
