--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Swift
-        if: ${{ matrix.os }} != "ubuntu-22.04-arm64"
+        if: ${{ matrix.os }} != 'ubuntu-22.04-arm64'
         # if: matrix.os != 'ubuntu-22.04-arm64'
         uses: swift-actions/setup-swift@v1
         with:
