--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -35,8 +35,8 @@ on: [push]
 
 jobs:
   artifact-build:
+    if: ${ matrix.os } == 'ubuntu-22.04-arm64'
     runs-on: ${{ matrix.os }}
-    if: ${{ matrix.os }} == 'ubuntu-22.04-arm64'
     strategy:
       fail-fast: false
       matrix:
