--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
-    if: matrix.os == 'ubuntu-22.04-arm64'
+    if: ${{ matrix.os }} == 'ubuntu-22.04-arm64'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
