--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -39,7 +39,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
-    if: ${{ matrix.os }} == 'ubuntu-22.04-arm64'
+    if: matrix.os == 'ubuntu-22.04-arm64'
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
