--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -40,6 +40,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
         exclude:
+          if: contains(github.event.head_commit.message, 'linux-arm64')
           - os: ubuntu-22.04-arm64
     # if: matrix.os == 'ubuntu-22.04-arm64'
     runs-on: ${{ matrix.os }}
