--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -41,8 +41,8 @@ jobs:
         os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
         exclude:
           - os: ubuntu-22.04-arm64
-    # if: matrix.os == 'ubuntu-22.04-arm64'
-    if: contains(github.event.head_commit.message, 'linux-arm64')
+    if: matrix.os == 'ubuntu-22.04-arm64'
+    # if: contains(github.event.head_commit.message, 'linux-arm64')
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
