--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -21,35 +21,59 @@ on: [push]
 
 
 
-#   ubuntu22-arm64:
-#     # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
-#     if: contains(github.event.head_commit.message, 'linux-arm64')
-#     # 通过actions-runner远程使用Termux-Ubuntu系统
-#     runs-on: ubuntu-22.04-arm64
+# #   ubuntu22-arm64:
+# #     # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
+# #     if: contains(github.event.head_commit.message, 'linux-arm64')
+# #     # 通过actions-runner远程使用Termux-Ubuntu系统
+# #     runs-on: ubuntu-22.04-arm64
+# #     steps:
+# #       - name: Checkout
+# #         uses: checkout-code
+# #       - name: Show Info
+# #         uses: system-info
+
+
+# jobs:
+#   artifact-build:
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
+#         exclude:
+#           - os: ubuntu-22.04-arm64
+#     if: matrix.os == 'ubuntu-22.04-arm64'
+#     # if: contains(github.event.head_commit.message, 'linux-arm64')
+#     runs-on: ${{ matrix.os }}
 #     steps:
 #       - name: Checkout
-#         uses: checkout-code
-#       - name: Show Info
-#         uses: system-info
+#         uses: actions/checkout@v3
+#       - name: Setup Swift
+#         # if: ${{ matrix.os }} != 'ubuntu-22.04-arm64'
+#         if: matrix.os != 'ubuntu-22.04-arm64'
+#         uses: swift-actions/setup-swift@v1
+#         with:
+#           swift-version: '5.7.0'
+#       - name: Show System Info
+#         id: system-info
+#         run: |
+#           echo ${{ matrix.os }}
+#           uname
+#           uname -m
+#           uname -a
+#           swift --version
 
 
 jobs:
-  artifact-build:
+  x86_64:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04,  macos-12, ubuntu-22.04-arm64]
-        exclude:
-          - os: ubuntu-22.04-arm64
-    if: matrix.os == 'ubuntu-22.04-arm64'
-    # if: contains(github.event.head_commit.message, 'linux-arm64')
+        os: [ubuntu-22.04,  macos-12]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Swift
-        # if: ${{ matrix.os }} != 'ubuntu-22.04-arm64'
-        if: matrix.os != 'ubuntu-22.04-arm64'
         uses: swift-actions/setup-swift@v1
         with:
           swift-version: '5.7.0'
@@ -62,3 +86,26 @@ jobs:
           uname -a
           swift --version
           
+  linux-arm64:
+    # 表示git commit 中包含linux-arm64字符串时该任务才执行，否则直接跳过
+    if: contains(github.event.head_commit.message, 'linux-arm64')
+    # 通过actions-runner远程使用Termux-Ubuntu系统
+    runs-on: ubuntu-22.04-arm64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Show System Info
+        run: |
+          uname
+          uname -m
+          uname -a
+          swift --version
+
+
+
+
+
+
+
+
+
