--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -42,9 +42,46 @@ on: [push, pull_request]
 
 
 
+# jobs:
+#   aarch64_job:
+#     runs-on: ubuntu-20.04
+#     name: Build on Ubuntu aarch64
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: uraimo/run-on-arch-action@v2
+#         name: Run commands
+#         id: runcmd
+#         with:
+#           arch: aarch64
+#           distro: ubuntu20.04
+#           # Not required, but speeds up builds by storing container images in
+#           # a GitHub package registry.
+#           githubToken: ${{ github.token }}
+
+#           # Set an output parameter `uname` for use in subsequent steps
+#           shell: /bin/bash
+#           run: |
+#             uname -a
+#             echo ::set-output name=uname1::$(uname -a)
+#             ls -la
+#             ./swift-env-ubuntu-22.04.sh
+#             swift -version
+
+#       - name: Get the output
+#         # Echo the `uname` output parameter from the `runcmd` step
+#         run: |
+#           echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
+#           uname -m
+#           ls -la
+
+
+
+
+
+
 jobs:
   aarch64_job:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     name: Build on Ubuntu aarch64
     steps:
       - uses: actions/checkout@v3
@@ -53,12 +90,13 @@ jobs:
         id: runcmd
         with:
           arch: aarch64
-          distro: ubuntu20.04
+          distro: ubuntu22.04
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
           githubToken: ${{ github.token }}
 
           # Set an output parameter `uname` for use in subsequent steps
+          shell: /bin/bash
           run: |
             uname -a
             echo ::set-output name=uname1::$(uname -a)
@@ -72,3 +110,7 @@ jobs:
           echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
           uname -m
           ls -la
+
+
+
+
