--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -96,7 +96,7 @@ jobs:
           githubToken: ${{ github.token }}
 
           # Set an output parameter `uname` for use in subsequent steps
-          shell: /bin/bash
+          shell: /bin/sh
           run: |
             uname -a
             echo ::set-output name=uname1::$(uname -a)
