--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -99,16 +99,16 @@ jobs:
           shell: /bin/sh
           run: |
             uname -a
-            echo ::set-output name=uname1::$(uname -a)
+            echo "{uname1}={$(uname -a)}" >> $GITHUB_OUTPUT
             ls -la
             apt-get install wget
-            ./swift-env-ubuntu-22.04.sh
-            swift -version
+          # ./swift-env-ubuntu-22.04.sh
+          # swift -version
 
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
         run: |
-          echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
+          echo "The uname output was ${{ $GITHUB_OUTPUT.uname1 }}"
           uname -m
           ls -la
 
