--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
         run: |
-          echo "The uname output was  ${{ steps.runcmd.$GITHUB_OUTPUT.uname1 }} "
+          echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
           uname -m
           ls -la
 
