--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -98,9 +98,9 @@ jobs:
           githubToken: ${{ github.token }}
 
           # Set an output parameter `uname` for use in subsequent steps
-          shell: /bin/bash
+          shell: /bin/sh
           install: |
-            apt-get install wget
+            apt-get install -q -y wget
           run: |
             uname -a
             echo "uname1=$(uname -a)" >> $GITHUB_OUTPUT
