--- a/.github/workflows/Run-On-Arch.yml
+++ b/.github/workflows/Run-On-Arch.yml
@@ -99,11 +99,12 @@ jobs:
 
           # Set an output parameter `uname` for use in subsequent steps
           shell: /bin/sh
-          install: |
-            apt-get install -q -y wget
+          # install: |
+          #   apt-get install -q -y wget
           run: |
             uname -a
             echo "uname1=$(uname -a)" >> $GITHUB_OUTPUT
+            echo "123" > 123.txt
             ls -la
             
 
@@ -113,7 +114,7 @@ jobs:
           echo "The uname output was ${{ steps.runcmd.outputs.uname1 }}"
           uname -m
           ls -la
-
-
+      - name: show cot
+        run: ls -la
 
 
