--- a/.github/workflows/Swift on ARM64 Linux.yml
+++ b/.github/workflows/Swift on ARM64 Linux.yml
@@ -6,10 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift:5.7-focal-arm64
+      image: swift:5.4-focal-arm64
     steps:
-    - uses: actions/checkout@v3
-    - name: System Info
+    - uses: actions/checkout@v2
+    - name: Build and test
       run: |
-        uname -a
-        swift -version
+        swift build
+        swift test
