--- a/.github/workflows/Swift on ARM64 Linux.yml
+++ b/.github/workflows/Swift on ARM64 Linux.yml
@@ -6,8 +6,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift
-      arch: arm64
+      image: swift-arm64
+    
     steps:
     - uses: actions/checkout@v3
     - name: Build and test
