--- a/.github/workflows/Swift on ARM64 Linux-docker.yml
+++ b/.github/workflows/Swift on ARM64 Linux-docker.yml
@@ -11,7 +11,7 @@ jobs:
       uses: docker/setup-qemu-action@v1
 
     - name: Build and run Docker image
-      uses: docker/buildx-build-action@v2
+      uses: docker/buildx-build-action@master
       with:
         context: .
         file: Dockerfile
