--- a/.github/workflows/Swift on ARM64 Linux.yml
+++ b/.github/workflows/Swift on ARM64 Linux.yml
@@ -6,10 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift
-      platform: arm64
+      image: swiftarm/swift
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Build and test
       run: |
         swift -version
