--- a/.github/workflows/Swift on ARM64 Linux.yml
+++ b/.github/workflows/Swift on ARM64 Linux.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: swiftarm/swift
-      platform: linux/amd64
     steps:
     - uses: actions/checkout@v3
     - name: Build and test
       run: |
+        docker run -it swiftarm/swift /bin/bash
         swift -version
         uname -a
