--- a/.github/workflows/Swift on ARM64 Linux-docker.yml
+++ b/.github/workflows/Swift on ARM64 Linux-docker.yml
@@ -8,10 +8,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Build and run Docker image
-      uses: docker/buildx-build-action@master
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
       with:
         context: .
         file: Dockerfile
