--- a/.github/workflows/Swift on ARM64 Linux-docker.yml
+++ b/.github/workflows/Swift on ARM64 Linux-docker.yml
@@ -16,3 +16,6 @@ jobs:
         file: Dockerfile
         platform: linux/arm64
         target: myapp
+    - name: info
+      run: |
+        uname -a
