--- a/.github/workflows/Swift on ARM64 Linux-docker.yml
+++ b/.github/workflows/Swift on ARM64 Linux-docker.yml
@@ -3,8 +3,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: swiftarm/swift
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -14,7 +12,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
       with:
-        context: .
+        context: ../../.
         file: Dockerfile
         platform: linux/arm64
         target: myapp
