--- a/.github/workflows/Swift on ARM64 Linux-docker.yml
+++ b/.github/workflows/Swift on ARM64 Linux-docker.yml
@@ -1,4 +1,4 @@
-name: Swift on ARM64 Linux-docker
+name: My Workflow
 on: [push]
 jobs:
   build:
@@ -8,14 +8,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-qemu-action@v1
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
       with:
-        context: ../../.
-        file: Dockerfile
-        platform: linux/arm64
-        target: myapp
-    - name: info
-      run: |
-        uname -a
+        context: .
+        push: true
+        tags: myimage:latest
+        platforms: linux/arm64/v8
