--- a/.github/workflows/Swift on ARM64 Linux.yml
+++ b/.github/workflows/Swift on ARM64 Linux.yml
@@ -51,9 +51,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: swift:latest
-      options: --platform arm64
+     #options: --platform arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build
+      - name: info
         run: swift -version
